@@ -1,132 +1,132 @@
 package woowacourse.shoppingcart.acceptance;
 
+import static java.lang.Long.parseLong;
 import static org.assertj.core.api.Assertions.assertThat;
-import static woowacourse.shoppingcart.acceptance.CartAcceptanceTest.장바구니_아이템_추가되어_있음;
-import static woowacourse.shoppingcart.acceptance.ProductAcceptanceTest.상품_등록되어_있음;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
-import io.restassured.RestAssured;
 import io.restassured.response.ExtractableResponse;
 import io.restassured.response.Response;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
+import org.springframework.test.context.jdbc.Sql;
+import woowacourse.auth.dto.TokenRequest;
+import woowacourse.auth.dto.TokenResponse;
+import woowacourse.shoppingcart.domain.OrderDetail;
 import woowacourse.shoppingcart.domain.Orders;
+import woowacourse.shoppingcart.dto.CartSaveRequest;
 import woowacourse.shoppingcart.dto.OrderRequest;
-import java.util.Arrays;
-import java.util.Collections;
+import woowacourse.shoppingcart.dto.OrderResponse;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @DisplayName("주문 관련 기능")
+@Sql("/testData.sql")
 public class OrderAcceptanceTest extends AcceptanceTest {
-    private static final String USER = "puterism";
+
+    private static final String EMAIL = "sun@gmail.com";
+    private static final String PASSWORD = "12345678";
+
     private Long cartId1;
     private Long cartId2;
+    private String accessToken;
 
     @Override
     @BeforeEach
     public void setUp() {
         super.setUp();
 
-        Long productId1 = 상품_등록되어_있음("치킨", 10_000, "http://example.com/chicken.jpg");
-        Long productId2 = 상품_등록되어_있음("맥주", 20_000, "http://example.com/beer.jpg");
+        // 토큰 발급
+        accessToken = requestPostWithBody("/api/login", new TokenRequest(EMAIL, PASSWORD))
+                .as(TokenResponse.class)
+                .getAccessToken();
 
-        cartId1 = 장바구니_아이템_추가되어_있음(USER, productId1);
-        cartId2 = 장바구니_아이템_추가되어_있음(USER, productId2);
+        // 카트 담기
+        final ExtractableResponse<Response> cartResponse1 =
+                requestPostWithTokenAndBody("/api/customer/carts", accessToken, new CartSaveRequest(1L, 10));
+        final ExtractableResponse<Response> cartResponse2 =
+                requestPostWithTokenAndBody("/api/customer/carts", accessToken, new CartSaveRequest(2L, 10));
+
+        cartId1 = parseLong(cartResponse1.header("Location").split("/carts/")[1]);
+        cartId2 = parseLong(cartResponse2.header("Location").split("/carts/")[1]);
     }
 
     @DisplayName("주문하기")
     @Test
-    void addOrder() {
-        List<OrderRequest> orderRequests = Stream.of(cartId1, cartId2)
-                .map(cartId -> new OrderRequest(cartId, 10))
-                .collect(Collectors.toList());
+    void add() {
+        // given
+        final OrderRequest orderRequest1 = new OrderRequest(cartId1, 10);
+        final OrderRequest orderRequest2 = new OrderRequest(cartId2, 10);
 
-        ExtractableResponse<Response> response = 주문하기_요청(USER, orderRequests);
+        // when
+        final ExtractableResponse<Response> response =
+                requestPostWithTokenAndBody("/api/customer/orders", accessToken, List.of(orderRequest1, orderRequest2));
+        final long orderId = parseLong(response.header("Location").split("/orders/")[1]);
 
-        주문하기_성공함(response);
+        // then
+        assertAll(
+                () -> assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value()),
+                () -> assertThat(orderId).isOne()
+        );
     }
 
-    @DisplayName("주문 내역 조회")
+    @DisplayName("단일 주문 조회")
     @Test
-    void getOrders() {
-        Long orderId1 = 주문하기_요청_성공되어_있음(USER, Collections.singletonList(new OrderRequest(cartId1, 2)));
-        Long orderId2 = 주문하기_요청_성공되어_있음(USER, Collections.singletonList(new OrderRequest(cartId2, 5)));
+    void getOne() {
+        // given
+        final OrderRequest orderRequest1 = new OrderRequest(cartId1, 10);
+        final OrderRequest orderRequest2 = new OrderRequest(cartId2, 10);
+        final ExtractableResponse<Response> createResponse =
+                requestPostWithTokenAndBody("/api/customer/orders", accessToken, List.of(orderRequest1, orderRequest2));
+        final long orderId = parseLong(createResponse.header("Location").split("/orders/")[1]);
+        final List<OrderDetail> orderDetails = List.of(
+                new OrderDetail(1L, 10000, "치킨", "http://example.com/chicken.jpg", 10),
+                new OrderDetail(2L, 20000, "맥주", "http://example.com/beer.jpg", 10)
+        );
 
-        ExtractableResponse<Response> response = 주문_내역_조회_요청(USER);
+        // when
+        final ExtractableResponse<Response> response =
+                requestGetWithTokenAndBody("/api/customer/orders/" + orderId, accessToken);
+        final OrderResponse orderResponseDto = response.as(OrderResponse.class);
 
-        주문_조회_응답됨(response);
-        주문_내역_포함됨(response, orderId1, orderId2);
+        // then
+        assertAll(
+                () -> assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value()),
+                () -> assertThat(orderResponseDto).usingRecursiveComparison()
+                        .isEqualTo(OrderResponse.from(new Orders(1L, orderDetails))));
     }
 
-    @DisplayName("주문 단일 조회")
+    @DisplayName("주문 전체 조회")
     @Test
-    void getOrder() {
-        Long orderId = 주문하기_요청_성공되어_있음(USER, Arrays.asList(
-                new OrderRequest(cartId1, 2),
-                new OrderRequest(cartId2, 4)
-        ));
+    void getAll() {
+        // given
+        final OrderRequest orderRequest1 = new OrderRequest(cartId1, 10);
+        final OrderRequest orderRequest2 = new OrderRequest(cartId2, 10);
+        final ExtractableResponse<Response> createResponse1 =
+                requestPostWithTokenAndBody("/api/customer/orders", accessToken, List.of(orderRequest1));
+        final ExtractableResponse<Response> createResponse2 =
+                requestPostWithTokenAndBody("/api/customer/orders", accessToken, List.of(orderRequest2));
+        final long orderId1 = parseLong(createResponse1.header("Location").split("/orders/")[1]);
+        final long orderId2 = parseLong(createResponse2.header("Location").split("/orders/")[1]);
 
-        ExtractableResponse<Response> response = 주문_단일_조회_요청(USER, orderId);
+        final List<OrderDetail> orderDetails1 = List.of(
+                new OrderDetail(1L, 10000, "치킨", "http://example.com/chicken.jpg", 10));
+        final List<OrderDetail> orderDetails2 = List.of(
+                new OrderDetail(2L, 20000, "맥주", "http://example.com/beer.jpg", 10));
 
-        주문_조회_응답됨(response);
-        주문_조회됨(response, orderId);
-    }
+        // when
+        final ExtractableResponse<Response> response =
+                requestGetWithTokenAndBody("/api/customer/orders", accessToken);
+        final List<OrderResponse> orderResponses = response.jsonPath().getList(".", OrderResponse.class);
 
-    public static ExtractableResponse<Response> 주문하기_요청(String userName, List<OrderRequest> orderRequests) {
-        return RestAssured
-                .given().log().all()
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .body(orderRequests)
-                .when().post("/api/customers/{customerName}/orders", userName)
-                .then().log().all()
-                .extract();
-    }
-
-    public static ExtractableResponse<Response> 주문_내역_조회_요청(String userName) {
-        return RestAssured
-                .given().log().all()
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when().get("/api/customers/{customerName}/orders", userName)
-                .then().log().all()
-                .extract();
-    }
-
-    public static ExtractableResponse<Response> 주문_단일_조회_요청(String userName, Long orderId) {
-        return RestAssured
-                .given().log().all()
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when().get("/api/customers/{customerName}/orders/{orderId}", userName, orderId)
-                .then().log().all()
-                .extract();
-    }
-
-    public static void 주문하기_성공함(ExtractableResponse<Response> response) {
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value());
-        assertThat(response.header("Location")).isNotBlank();
-    }
-
-    public static Long 주문하기_요청_성공되어_있음(String userName, List<OrderRequest> orderRequests) {
-        ExtractableResponse<Response> response = 주문하기_요청(userName, orderRequests);
-        return Long.parseLong(response.header("Location").split("/orders/")[1]);
-    }
-
-    public static void 주문_조회_응답됨(ExtractableResponse<Response> response) {
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
-    }
-
-    public static void 주문_내역_포함됨(ExtractableResponse<Response> response, Long... orderIds) {
-        List<Long> resultOrderIds = response.jsonPath().getList(".", Orders.class).stream()
-                .map(Orders::getId)
-                .collect(Collectors.toList());
-        assertThat(resultOrderIds).contains(orderIds);
-    }
-
-    private void 주문_조회됨(ExtractableResponse<Response> response, Long orderId) {
-        Orders resultOrder = response.as(Orders.class);
-        assertThat(resultOrder.getId()).isEqualTo(orderId);
+        // then
+        assertAll(
+                () -> assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value()),
+                () -> assertThat(orderResponses).usingRecursiveComparison()
+                        .isEqualTo(List.of(
+                                OrderResponse.from(new Orders(orderId1, orderDetails1)),
+                                OrderResponse.from(new Orders(orderId2, orderDetails2))
+                        ))
+        );
     }
 }
